# jsonschema

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  MIGRATION.md  README.md  analyze_schemas.py  codecov.yml
crates/jsonschema/: Cargo.toml
crates/jsonschema-codegen/: Cargo.toml
crates/jsonschema-codegen/src/: codegen.rs  context.rs  lib.rs  tests.rs
crates/jsonschema-codegen/src/codegen/: combinators.rs  dispatch.rs  draft.rs  emit_root.rs  errors.rs  expr.rs  helpers.rs  object_schema.rs  refs.rs  regex.rs  schema_compile.rs  stack_emit.rs  symbols.rs
crates/jsonschema-codegen/src/snapshots/: jsonschema_codegen__tests__snapshot_tests__additional_false.snap  jsonschema_codegen__tests__snapshot_tests__additional_schema.snap  jsonschema_codegen__tests__snapshot_tests__all_of.snap  jsonschema_codegen__tests__snapshot_tests__any_of.snap  jsonschema_codegen__tests__snapshot_tests__const_str.snap  jsonschema_codegen__tests__snapshot_tests__const_str_with_type.snap  jsonschema_codegen__tests__snapshot_tests__empty_schema.snap  jsonschema_codegen__tests__snapshot_tests__enum_integer_not_redundant.snap  jsonschema_codegen__tests__snapshot_tests__enum_str.snap  jsonschema_codegen__tests__snapshot_tests__enum_str_with_type.snap  jsonschema_codegen__tests__snapshot_tests__exclusive_maximum.snap  jsonschema_codegen__tests__snapshot_tests__exclusive_minimum.snap  jsonschema_codegen__tests__snapshot_tests__if_then_else.snap  jsonschema_codegen__tests__snapshot_tests__items_schema.snap  jsonschema_codegen__tests__snapshot_tests__max_items.snap  jsonschema_codegen__tests__snapshot_tests__max_length.snap  jsonschema_codegen__tests__snapshot_tests__maximum.snap  jsonschema_codegen__tests__snapshot_tests__min_items.snap  jsonschema_codegen__tests__snapshot_tests__min_length.snap  jsonschema_codegen__tests__snapshot_tests__min_max_equal.snap  jsonschema_codegen__tests__snapshot_tests__min_max_items_equal.snap  jsonschema_codegen__tests__snapshot_tests__min_max_length_equal.snap  jsonschema_codegen__tests__snapshot_tests__min_max_properties_equal.snap  jsonschema_codegen__tests__snapshot_tests__minimum.snap  jsonschema_codegen__tests__snapshot_tests__multi_type_simple.snap  jsonschema_codegen__tests__snapshot_tests__multi_type_with_integer.snap  jsonschema_codegen__tests__snapshot_tests__multiple_of.snap  jsonschema_codegen__tests__snapshot_tests__not.snap  jsonschema_codegen__tests__snapshot_tests__one_of.snap  jsonschema_codegen__tests__snapshot_tests__one_of_discriminator_bool.snap  jsonschema_codegen__tests__snapshot_tests__one_of_discriminator_int.snap  jsonschema_codegen__tests__snapshot_tests__one_of_discriminator_string.snap  jsonschema_codegen__tests__snapshot_tests__pattern.snap  jsonschema_codegen__tests__snapshot_tests__pattern_alternation.snap  jsonschema_codegen__tests__snapshot_tests__pattern_dollar_ref.snap  jsonschema_codegen__tests__snapshot_tests__pattern_dollar_ref_exact.snap  jsonschema_codegen__tests__snapshot_tests__pattern_properties.snap  jsonschema_codegen__tests__snapshot_tests__pattern_string_alternation.snap  jsonschema_codegen__tests__snapshot_tests__pattern_x_prefix.snap  jsonschema_codegen__tests__snapshot_tests__properties.snap  (+4 more)
crates/jsonschema-codegen/tests/ui/: attribute_not_key_value.rs  content_encoding_missing_key.rs  content_encoding_non_string_with_media_type.rs  (+129 more)
crates/jsonschema-core/: Cargo.toml
crates/jsonschema-core/src/: regex.rs
crates/jsonschema-ir/: Cargo.toml
crates/jsonschema-ir/src/: blocks.rs  error.rs  keywords.rs  lib.rs  nodes.rs  parse.rs  schema.rs
crates/jsonschema-macros/: Cargo.toml
crates/jsonschema-macros-core/: Cargo.toml
crates/jsonschema-macros-core/benches/: generate.rs
crates/jsonschema-macros-core/src/: codegen.rs  context.rs  lib.rs  tests.rs
crates/jsonschema-macros/src/: lib.rs
crates/jsonschema-macros/tests/: renamed_dependency.rs
crates/jsonschema-py/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/jsonschema-py/benches/: bench.py  bench_canonical.py  bench_canonical_dumps.py
crates/jsonschema-py/src/: canonical.rs  http.rs  lib.rs  regex.rs  registry.rs  ser.rs
crates/jsonschema-py/tests-py/: test_annotation_suite.py  test_bundle.py  test_canonical.py  test_canonical_dumps.py  test_canonical_schema.py  test_canonical_view.py  test_canonical_view_differential.py  test_canonicalize.py  test_dereference.py  test_evaluate.py  test_jsonschema.py  test_keywords.py  test_meta.py  test_patterns.py  test_registry.py  test_resolver.py  test_suite.py  test_validator_cls_for.py  test_validator_map.py
crates/jsonschema-value/: Cargo.toml  README.md
crates/jsonschema-value/src/: cmp.rs  conformance.rs  lib.rs  magnus.rs  numeric.rs  numeric_check.rs  pyo3.rs  serde_json.rs  types.rs  unique.rs
crates/jsonschema-value/tests/: conformance.rs
crates/jsonschema-wasm/: Cargo.toml
crates/jsonschema-wasm/src/: errors.rs  lib.rs  options.rs
crates/jsonschema-wasm/tests/: wasm.rs
crates/jsonschema/benches/: canonicalize.rs  codegen.rs  jsonschema.rs  metaschema.rs  unevaluated_properties.rs  v2.rs
crates/jsonschema/src/: arena.rs  bundler.rs  compiler.rs  compiler_v2.rs  content_encoding.rs  content_media_type.rs  dereferencer.rs  ecma.rs  error.rs  evaluation.rs  formats.rs  lib.rs  meta_codegen.rs  node.rs  options.rs  output.rs  paths.rs  primitive_type.rs  properties.rs  regex.rs  retriever.rs  tracing.rs  types.rs  validator.rs  validator_enum.rs
crates/jsonschema/tests/: annotation_suite.rs  bundle.rs  canonical.rs  canonical_proptest.rs  canonical_suite.rs  canonicalization.rs  codegen.rs  custom_representation.rs  leak.rs  output.rs  output_basic_draft2020_12.json  output_suite.rs  petstore.json  suite.rs  tracing.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: canonical.rs  codegen.rs  codegen_parity.rs  referencing.rs
fuzz/seeds/codegen/: enum-const  object-boundary  object-patterns  object-valid
fuzz/seeds/codegen_parity/: seed-01
profiler/: Cargo.toml  Justfile
profiler/src/: main.rs
(+928 files in other folders)
