[package]
name = "jsonschema-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# `resolve-http` disabled: network `$ref`s would stall iterations on the HTTP timeout.
jsonschema = { path = "../crates/jsonschema/", default-features = false, features = ["resolve-file", "macros"] }
referencing = { path = "../crates/jsonschema-referencing" }
serde_json = "1"

[workspace]
members = ["."]

[profile.release]
debug = true

[[bin]]
name = "builder"
path = "fuzz_targets/builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "validation"
path = "fuzz_targets/validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "referencing"
path = "fuzz_targets/referencing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codegen_parity"
path = "fuzz_targets/codegen_parity.rs"
test = false
doc = false
bench = false
