[package]
name = "jsonschema-profiler"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["."]

[dependencies]
dhat = "*"
jsonschema = { path = "../crates/jsonschema/", features = ["arbitrary-precision"] }
referencing = { path = "../crates/jsonschema-referencing" }
pico-args = "0.5"
serde_json = "1"

[features]
dhat-heap = []

[profile.release]
debug = true

[profile.profiling]
inherits = "release"
debug = true
