[package]
name = "jsonschema-codegen"
version = "0.42.1"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
arbitrary-precision = []

[dependencies]
jsonschema-core = { version = "0.42.1", path = "../jsonschema-core" }
proc-macro2 = "1"
quote = "1"
referencing = { version = "0.42.1", path = "../jsonschema-referencing" }
regex = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
