[package]
name = "jsonschema-core"
version = "0.42.1"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["regex"]
regex = ["regex-syntax"]

[dependencies]
regex-syntax = { version = "0.8.9", optional = true }

[dev-dependencies]
test-case = "3"

[lints]
workspace = true

