[package]
name = "jsonschema-ir"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
serde_json = { version = "1", optional = true }
string-interner = "0.19.0"

[dev-dependencies]
codspeed-criterion-compat = { version = "2.7", default-features = false }
criterion = { version = "0.5", default-features = false }
serde_json = "1"
test-case = "3.3.1"

[features]
default = []
serde_json = ["dep:serde_json"]

[lints]
workspace = true

[[bench]]
harness = false
name = "value"
