[package]
name = "jsonschema-ir"
version = "0.30.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
referencing = { version = "0.30.0", path = "../jsonschema-referencing" }
serde_json.workspace = true

[lints]
workspace = true
