[package]
name = "jsonschema-macros"
version = "0.47.0"
description = "Compile-time JSON Schema validator generation for the jsonschema crate"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
arbitrary-precision = ["jsonschema-macros-core/arbitrary-precision"]

[dependencies]
jsonschema-macros-core = { version = "0.47.0", path = "../jsonschema-macros-core" }
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
serde_json = "1"
jsonschema = { path = "../jsonschema", features = ["macros"] }

[lints]
workspace = true
