[package]
name = "jsonschema-py"
version = "0.48.5"
description = "A high-performance JSON Schema validator for Python"
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]
readme = "README.md"
license.workspace = true
repository.workspace = true
rust-version = "1.87"
edition.workspace = true
authors.workspace = true

[lib]
name = "jsonschema_rs"
crate-type = ["cdylib"]

[dependencies]
ahash.workspace = true
jsonschema = { path = "../jsonschema/", features = ["arbitrary-precision", "macros"] }
jsonschema-value = { path = "../jsonschema-value", features = ["pyo3"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
pyo3-built = "0.6"
serde.workspace = true
serde_json.workspace = true
zmij = "1.0.23"

[build-dependencies]
built = { version = "=0.8.1", features = ["cargo-lock", "chrono"] }
pyo3-build-config = { version = "0.29", features = ["resolve-config"] }

[lints]
workspace = true
