[package]
name = "jsonschema-value"
version = "0.48.2"
description = "JSON value representations and semantics shared by the jsonschema validator and its bindings"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["serde_json"]
serde_json = ["dep:bytecount"]
macros = []
arbitrary-precision = ["serde_json/arbitrary_precision", "dep:num-bigint"]

[dependencies]
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"], optional = true }
fraction = { version = "0.15", default-features = false, features = [
  "with-bigint",
] }
num-bigint = { version = "0.4", optional = true }
num-cmp = "0.1"
num-traits = "0.2.19"
serde_json = { workspace = true, features = ["float_roundtrip"] }

[dev-dependencies]
test-case = "3"

[lints]
workspace = true
