[package]
name = "jsonschema"
version = "0.46.9"
description = "JSON schema validaton library"
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
exclude = ["tests/fixtures/schemastore/corpus-schemastore-catalog.json"]

[features]
default = ["resolve-http", "resolve-file", "tls-aws-lc-rs", "canonical"]
# Schema canonicalization and the schema algebra (`canonicalize`, `CanonicalSchema`).
# `serde_json/float_roundtrip`: canonicalization re-parses emitted schemas; the default parser would perturb floats, breaking idempotence.
# `serde_json/unbounded_depth`: Raw-preserved schemas can contain payloads deeper than serde_json's default parser limit.
canonical = [
    "dep:strum",
    "dep:num-integer",
    "serde_json/float_roundtrip",
    "serde_json/unbounded_depth",
]
resolve-http = ["reqwest", "dep:rustls"]
resolve-file = []
resolve-async = [
    "referencing/retrieve-async",
    "reqwest",
    "dep:async-trait",
    "dep:tokio",
]
# Default TLS provider for HTTP resolution.
tls-aws-lc-rs = ["rustls/aws-lc-rs"]
# Use ring instead of aws-lc-rs for TLS.
tls-ring = ["rustls/ring"]
# Support for arbitrarily large integers and exact decimal values when parsing JSON from strings.
arbitrary-precision = ["serde_json/arbitrary_precision", "dep:num-bigint"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Use rustls-no-provider to allow manual selection of crypto backend
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "json",
  "http2",
  "rustls-no-provider",
], optional = true }
# Crypto provider for TLS: aws-lc-rs by default, or ring when tls-ring feature is enabled
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

# Mirror reqwest's wasm cfg; other wasm targets get native deps that don't build.
[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
reqwest = { version = "0.13", features = ["json"], default-features = false, optional = true }

[dependencies]
ahash.workspace = true
jsonschema-regex = { version = "0.46.9", path = "../jsonschema-regex" }
async-trait = { version = "0.1.86", optional = true }
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
data-encoding = "2.9"
email_address = "0.2.9"
fancy-regex = "0.18"
fraction = { version = "0.15", default-features = false, features = [
  "with-bigint",
] }
idna = "1.0.2"
itoa = "1"
num-bigint = { version = "0.4", optional = true }
num-cmp = "0.1"
num-integer = { version = "0.1", optional = true }
num-traits = "0.2.19"
percent-encoding = "2.3"
referencing = { version = "0.46.9", path = "../jsonschema-referencing" }
regex = "1.11.1"
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.28.0", features = ["derive"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt"], optional = true }
unicode-general-category = "1.1"
uuid-simd = { version = "0.8", default-features = false, features = ["std", "detect"] }

[dev-dependencies]
test-case = "3"
futures = { version = "0.3", default-features = false, features = ["std"] }
testsuite = { package = "jsonschema-testsuite", path = "../jsonschema-testsuite" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.55"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
benchmark = { path = "../benchmark/" }
codspeed-criterion-compat = { version = "5.0", default-features = false }
criterion = { version = "0.8", default-features = false }
hegeltest = "0.18"
tempfile = "3.13.0"
test-case = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true

[[bench]]
harness = false
name = "jsonschema"

[[bench]]
harness = false
name = "keywords"

[[bench]]
harness = false
name = "errors"

[[bench]]
harness = false
name = "location"

[[bench]]
harness = false
name = "unevaluated_properties"

[[bench]]
harness = false
name = "unevaluated_items"

[[bench]]
harness = false
name = "metaschema"

[[bench]]
harness = false
name = "canonicalize"
required-features = ["canonical"]
